[package]
name = "infrasys"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
authors = ["Aashna Sheth <shetaash@amazon.com>"]
edition = "2018"
publish = false

[dependencies]
hex = "0.4.0"
rusoto_core = "0.47"  
rusoto_cloudformation = "0.47.0"  
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] } 
pubsys-config = { path = "../pubsys-config/" }  
rusoto_s3 = "0.47.0"  
snafu = "0.6"  
toml = "0.5"
log = "0.4.14"  
structopt = { version = "0.3", default-features = false }  
clap = "2.33"  
url = "2.2.2"  
async-trait = "0.1.51"  
shell-words = "1.0.0" 
sha2 = "0.9"
serde_yaml = "0.8.17"
simplelog = "0.10.0"
serde_json = "1.0.66"
